# Cloud-Labs

./: .gitignore  README.md
CloudLab1/: README.md  mapping.xlsx
CloudLab2/: README.md
CloudLab2/data/: Azure_lab_3.csv  Azure_lab_team 3.csv  description.md
cloud_theory/: chernyakhovsky.md  galimzianov.md  ozerov.md
lab1/: README.md  docker_compose.yml  nginx.conf
lab1/first_project/: Dockerfile  pyproject.toml
lab1/first_project/app/api/: master.py
lab1/second_project/: pyproject.toml
lab1/second_project/app/: main.py
lab1/second_project/app/api/: master.py
lab2/: README.md
lab2/bad_docker/: Dockerfile
lab2/lab2*/: README.md
lab3/: README.md  bad_practices.yaml  good_pipeline.yaml
lab3/lab3*/: README.md  good_pipeline.yaml
labs/: ЛР3_Обеспечение_качества_данных.ipynb
