[tool.poetry]
name = "second-project"
version = "0.1.0"
description = ""
authors = ["Anton Ozerov <ozerovanton17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.114.2"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
